--- a/Assignment1/.vscode/launch.json
+++ b/Assignment1/.vscode/launch.json
@@ -16,7 +16,7 @@
             "request": "launch",
             "mainClass": "Driver",
             "projectName": "Assignment1_a2ab1653",
-            "args": "-f a01-data/basic-test.txt -k 11 -d 2 -a 1.099 -r"
+            "args": "-f a01-data/sample-p5-d3.txt -k 3"
         }
     ]
 }
