--- a/Assignment1/.vscode/launch.json
+++ b/Assignment1/.vscode/launch.json
@@ -16,7 +16,7 @@
             "request": "launch",
             "mainClass": "Driver",
             "projectName": "Assignment1_a2ab1653",
-            "args": "-f a01-data/sample-p1-d1.txt -m 100 -a 0.0003 -v 3"
+            "args": "-f a01-data/sample-p1-d2.txt -v 3"
         }
     ]
 }
