--- a/Assignment2/.vscode/launch.json
+++ b/Assignment2/.vscode/launch.json
@@ -16,7 +16,7 @@
             "request": "launch",
             "mainClass": "Driver",
             "projectName": "Assignment2_a2ab1654",
-            "args": "-f a02-data/titanic-data.txt -b 100 -l 100 -t 1 -v 3 -s 3 -p"
+            "args": "-f a02-data/titanic-data.txt -b 200 -d 2 -v 3"
         }
     ]
 }
